# SYCML

./: CMakeLists.txt  README.md  Regression.h  clustering.h  som.h  tests.h
Kernels/: CMakeLists.txt  RegressionKernel.h  clusterKernel.h
Linalg/: BLAS1.cpp  BLAS1.h  CMakeLists.txt
Linalg/Kernels/: BLAS1_Kernel.h  CMakeLists.txt
